compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__nested_record_access.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 245
expression: "\npub type A {\n  A(b: B)\n}\n\npub type B {\n  B(c: C)\n}\n\npub type C {\n  C(d: Bool)\n}\n\npub fn a(a: A) {\n  case a {\n    _ if a.b.c.d -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type A {
  A(b: B)
}

pub type B {
  B(c: C)
}

pub type C {
  C(d: Bool)
}

pub fn a(a: A) {
  case a {
    _ if a.b.c.d -> 1
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class A extends $CustomType {
  constructor(b) {
    super();
    this.b = b;
  }
}
export const A$A = (b) => new A(b);
export const A$isA = (value) => value instanceof A;
export const A$A$b = (value) => value.b;
export const A$A$0 = (value) => value.b;

export class B extends $CustomType {
  constructor(c) {
    super();
    this.c = c;
  }
}
export const B$B = (c) => new B(c);
export const B$isB = (value) => value instanceof B;
export const B$B$c = (value) => value.c;
export const B$B$0 = (value) => value.c;

export class C extends $CustomType {
  constructor(d) {
    super();
    this.d = d;
  }
}
export const C$C = (d) => new C(d);
export const C$isC = (value) => value instanceof C;
export const C$C$d = (value) => value.d;
export const C$C$0 = (value) => value.d;

export function a(a) {
  if (a.b.c.d) {
    return 1;
  } else {
    return 0;
  }
}
