compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__not_two.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 461
expression: "pub fn main(x, y) {\n  case x {\n    _ if !y && !x -> 0\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(x, y) {
  case x {
    _ if !y && !x -> 0
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
export function main(x, y) {
  if (!y && !x) {
    return 0;
  } else {
    return 1;
  }
}
