compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__referencing_pattern_var.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 5
expression: "pub fn main(xs) {\n  case xs {\n    #(x) if x -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(xs) {
  case xs {
    #(x) if x -> 1
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function main(xs) {
  let x = xs[0];
  if (x) {
    return 1;
  } else {
    return 0;
  }
}
